--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash": "^3.5.0",
     "method-override": "2.2.0",
     "moment": "^2.9.0",
+    "newrelic": "^1.18.3",
     "q": "^1.2.0"
   },
   "devDependencies": {
