--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
         "node": "0.12.00"
     },
     "scripts": {
-        "start": "NODE_ENV=development ./node_modules/.bin/nodemon server.js",
-        "test": "NODE_ENV=development ./node_modules/.bin/nodemon test.js"
+        "lint": "./node_modules/.bin/jshint ./app",
+        "checkStyle": "./node_modules/.bin/jscs ./app",
+        "pretest": "npm run-script lint && npm run-script checkStyle",
+        "test": "NODE_ENV=test ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --recursive -R spec -r should",
+        "start": "NODE_ENV=development ./node_modules/.bin/nodemon server.js"
     },
     "dependencies": {
         "async": "0.9.0",
         "body-parser": "1.8.2",
-        "evergram-common": "git+ssh://git@github.com:evergram/evergram-common.git#master",
+        "evergram-common": "git+ssh://git@github.com:crimsonronin/evergram-common.git#master",
         "express": "4.9.0",
         "lodash": "^3.5.0",
         "method-override": "2.2.0",
@@ -32,9 +35,13 @@
         "q": "^1.2.0"
     },
     "devDependencies": {
-        "supertest": "0.13.0",
-        "should": "4.0.4",
-        "mocha": "1.21.4",
-        "nodemon": "1.2.1"
+        "istanbul": "^0.3.13",
+        "jscs": "^1.12.0",
+        "jshint": "^2.7.0",
+        "mocha": "^2.2.4",
+        "should": "^6.0.1",
+        "sinon": "^1.14.1",
+        "nodemon": "1.2.1",
+        "supertest": "^0.15.0"
     }
 }
