--- a/package.json
+++ b/package.json
@@ -13,9 +13,6 @@
         "type": "git",
         "url": "https://github.com/evergram/evergram-consumer-manager.git"
     },
-    "engines": {
-        "node": "0.12.00"
-    },
     "scripts": {
         "lint": "./node_modules/.bin/jshint ./app",
         "checkStyle": "./node_modules/.bin/jscs ./app",
@@ -24,16 +21,14 @@
         "start": "NODE_ENV=development ./node_modules/.bin/nodemon server.js"
     },
     "dependencies": {
-        "async": "0.9.0",
-        "body-parser": "1.8.2",
         "evergram-common": "git+ssh://git@github.com:evergram/evergram-common.git#master",
-        "express": "4.9.0",
         "jsftp": "^1.5.2",
         "lodash": "^3.5.0",
-        "method-override": "2.2.0",
         "moment": "^2.9.0",
         "newrelic": "^1.18.3",
-        "q": "^1.2.0"
+        "q": "^1.2.0",
+        "slipstream": "^0.1.0",
+        "slipstream-sqs": "^1.0.0"
     },
     "devDependencies": {
         "istanbul": "^0.3.13",
@@ -43,6 +38,7 @@
         "should": "^6.0.1",
         "sinon": "^1.14.1",
         "nodemon": "1.2.1",
-        "supertest": "^0.15.0"
+        "supertest": "^0.15.0",
+        "slipstream-message": "^1.0.0"
     }
 }
