--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "evergram-common": "git+ssh://git@github.com:evergram/evergram-common.git#master",
+        "http": "0.0.0",
         "jsftp": "^1.5.2",
         "lodash": "^3.5.0",
         "moment": "^2.9.0",
