--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
-    "name": "evergram-consumer-manager",
-    "description": "Evergram's Instagram Consumer",
-    "keywords": [
-        "express",
-        "mongoose",
-        "mongodb"
-    ],
-    "version": "0.0.1",
-    "private": true,
-    "author": "Josh Stuart <joshstuartx@gmail.com>",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/evergram/evergram-consumer-manager.git"
-    },
-    "scripts": {
-        "lint": "./node_modules/.bin/jshint ./app",
-        "checkStyle": "./node_modules/.bin/jscs ./app",
-        "pretest": "npm run-script lint && npm run-script checkStyle",
-        "test": "NODE_ENV=test ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --recursive -R spec -r should",
-        "start": "NODE_ENV=development ./node_modules/.bin/nodemon server.js"
-    },
-    "dependencies": {
-        "evergram-common": "git+ssh://git@github.com:evergram/evergram-common.git#master",
-        "http": "0.0.0",
-        "jsftp": "^1.5.2",
-        "lodash": "^3.5.0",
-        "moment": "^2.9.0",
-        "newrelic": "^1.18.3",
-        "q": "^1.2.0",
-        "slipstream": "^0.1.0",
-        "slipstream-sqs": "^1.0.0"
-    },
-    "devDependencies": {
-        "istanbul": "^0.3.13",
-        "jscs": "^1.12.0",
-        "jshint": "^2.7.0",
-        "mocha": "^2.2.4",
-        "should": "^6.0.1",
-        "sinon": "^1.14.1",
-        "nodemon": "1.2.1",
-        "supertest": "^0.15.0",
-        "slipstream-message": "^1.0.0"
-    }
+  "name": "evergram-consumer-manager",
+  "description": "Evergram's Instagram Consumer",
+  "keywords": [
+    "express",
+    "mongoose",
+    "mongodb"
+  ],
+  "version": "0.0.1",
+  "private": true,
+  "author": "Josh Stuart <joshstuartx@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/evergram/evergram-consumer-manager.git"
+  },
+  "scripts": {
+    "lint": "./node_modules/.bin/jshint ./app",
+    "checkStyle": "./node_modules/.bin/jscs ./app",
+    "pretest": "npm run-script lint && npm run-script checkStyle",
+    "test": "NODE_ENV=test ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --recursive --reporter spec-xunit-file -r should",
+    "start": "NODE_ENV=development ./node_modules/.bin/nodemon server.js"
+  },
+  "dependencies": {
+    "evergram-common": "git+ssh://git@github.com:evergram/evergram-common.git#master",
+    "http": "0.0.0",
+    "jsftp": "^1.5.2",
+    "lodash": "^3.5.0",
+    "moment": "^2.9.0",
+    "newrelic": "^1.18.3",
+    "q": "^1.2.0",
+    "slipstream": "^0.1.0",
+    "slipstream-sqs": "^1.0.0"
+  },
+  "devDependencies": {
+    "istanbul": "^0.3.13",
+    "jscs": "^1.12.0",
+    "jshint": "^2.7.0",
+    "mocha": "^2.2.4",
+    "nodemon": "1.2.1",
+    "should": "^6.0.1",
+    "sinon": "^1.14.1",
+    "slipstream-message": "^1.0.0",
+    "spec-xunit-file": "0.0.1-3",
+    "supertest": "^0.15.0"
+  }
 }
