--- a/shippable.yml
+++ b/shippable.yml
@@ -5,6 +5,10 @@ language: node_js
 node_js:
   - 0.10.38
 
+# Mongo binds to 127.0.0.1 by default
+services:
+  - mongodb
+
 # The path for Xunit to output test reports
 env:
   - XUNIT_FILE=testresults/result.xml
@@ -17,3 +21,6 @@ before_script:
 # Running the tests
 script:
   - npm test
+
+after_script:
+  - mongo test --eval "db.dropDatabase()"
