--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "lint": "./node_modules/.bin/jshint ./app",
         "checkStyle": "./node_modules/.bin/jscs ./app",
         "pretest": "npm run-script lint && npm run-script checkStyle",
-        "test": "NODE_ENV=test ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --recursive --reporter spec-xunit-file -r should",
+        "test": "NODE_ENV=test ./node_modules/.bin/istanbul cover --dir shippable/coverage ./node_modules/.bin/_mocha -- --recursive --reporter spec-xunit-file -r should",
         "start": "NODE_ENV=development ./node_modules/.bin/nodemon server.js"
     },
     "dependencies": {
